Update project section UI and animations for improved user experience

--- a/src/app/components/projects-section/projects-section.component.html
+++ b/src/app/components/projects-section/projects-section.component.html
@@ -86,7 +86,7 @@
               *ngIf="project.playStoreUrl"
               mat-raised-button
               class="action-btn play-btn">
-              <mat-icon>shop</mat-icon>
+              <mat-icon>store</mat-icon>
               Play Store
             </button>
             
