--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
 
+// Material Icons fallback
+.material-icons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 1;
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  white-space: nowrap;
+  word-wrap: normal;
+  direction: ltr;
+  -webkit-font-smoothing: antialiased;
+}
+
 // Global styles
 * {
   margin: 0;
