--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,16 @@
 <main class="app-container">
-  <!-- Language Switcher -->
-  <div class="language-switcher">
-    <button mat-button (click)="switchLanguage('en')" class="lang-btn">EN</button>
-    <button mat-button (click)="switchLanguage('fr')" class="lang-btn">FR</button>
-  </div>
-  
-  <pro-hero-section></pro-hero-section>
-  <pro-skills-section></pro-skills-section>
-  <pro-projects-section></pro-projects-section>
-  <pro-experience-section></pro-experience-section>
-  <pro-footer-section></pro-footer-section>
+    <!-- Language Switcher -->
+    <div class="language-switcher">
+        <button mat-button (click)="switchLanguage('en')" class="lang-btn">EN</button>
+        <button mat-button (click)="switchLanguage('fr')" class="lang-btn">FR</button>
+    </div>
+
+    <pro-hero-section></pro-hero-section>
+    <pro-skills-section></pro-skills-section>
+    <pro-projects-section></pro-projects-section>
+    <pro-experience-section></pro-experience-section>
+    <pro-contact-me></pro-contact-me>
+    <pro-footer-section></pro-footer-section>
 </main>
 
 <router-outlet />
