Add favicon images, site manifest, robots.txt, and sitemap.xml
- Added favicon-16x16.png, favicon-32x32.png, and favicon.ico to enhance site branding.
- Created site.webmanifest for better integration with mobile devices and browsers.
- Added robots.txt to manage web crawler access and specify crawl delay.
- Implemented sitemap.xml to improve SEO and provide search engines with site structure.

--- a/src/app/components/hero-section/hero-section.component.html
+++ b/src/app/components/hero-section/hero-section.component.html
@@ -28,11 +28,12 @@
                 <p class="hero-description">{{ 'hero.description' | translate }}</p>
             </div>
         </div>
-
+        <div style="height: 5rem;"></div>
         <div class="scroll-indicator" (click)="scrollToSection('skills')">
             <span class="scroll-text">{{ 'hero.scrollDown' | translate }}</span>
             <mat-icon class="scroll-icon">keyboard_arrow_down</mat-icon>
         </div>
-    </div>
 
+    </div>
+    
 </section>
