--- a/src/app/components/hero-section/hero-section.component.scss
+++ b/src/app/components/hero-section/hero-section.component.scss
@@ -138,7 +138,7 @@
       position: absolute;
       bottom: 2rem;
       left: 50%;
-      transform: translateX(-50%);
+      transform: translateX(-50%) translateY(150%);
       cursor: pointer;
       display: flex;
       flex-direction: column;
