--- a/src/app/components/hero-section/hero-section.component.html
+++ b/src/app/components/hero-section/hero-section.component.html
@@ -1,6 +1,8 @@
 <section class="hero-section">
+    <!-- GitHub Star Banner -->
+    <pro-github-banner></pro-github-banner>
+    
     <div class="particles-container">
-        <pro-github-banner></pro-github-banner>
         <!-- Particles will be added here -->
     </div>
 
